<resources>
    <string name="pref_activate_grid_view_key" translatable="false">activate_grid_view</string>
    <string name="pref_grid_view_columns_count_key" translatable="false">grid_view_columns_count</string>
    <string name="pref_activate_dark_mode_key" translatable="false">activate_dark_mode</string>
    <string name="pref_theme_accent_color_key" translatable="false">theme_accent_color</string>
    <!-- pref_theme_accent_color_key values -->
    <string name="pref_theme_accent_color_default" translatable="false">default</string>
    <string name="pref_theme_accent_color_red" translatable="false">red</string>
    <string name="pref_theme_accent_color_green" translatable="false">green</string>
    <string name="pref_theme_accent_color_blue" translatable="false">blue</string>

    <string name="pref_application_version_key" translatable="false">application_version</string>
    <string name="pref_applications_pinned_at_top_key" translatable="false">applications_pinned_at_top</string>

    <string name="app_name" translatable="false">Minimum</string>
    <string name="dial">Dial</string>
    <string name="camera">Camera</string>
    <string name="preferences">Preferences</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="dark_theme">Dark theme</string>
    <string name="activate_dark_theme">Activate dark theme</string>
    <string name="accent_color">Accent color</string>
    <string name="take_pictures_with">Take pictures with</string>
    <string name="author">Author</string>
    <string name="created_by_jeovane">Created by Jeovene Santos, Aka JunioJsv</string>
    <string name="standard">Default</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="version">Version</string>
    <string name="licence">Licence</string>
    <string name="licence_mit" translatable="false">MIT</string>
    <string name="grid_view">Grid view</string>
    <string name="activate_grid_view">Activate grid view</string>
    <string name="grid_view_columns_count">Grid columns count</string>
    <string name="uninstall">Uninstall</string>
    <string name="pin_at_top">Pin at top</string>
    <string name="unpin_of_top">Unpin of top</string>
    <string name="information">Information</string>
    <string name="search">Search</string>
    <string name="agroup">Agroup</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="group">Group</string>
    <string name="ungroup">Ungroup</string>

    <string name="set_as_default_launcher">Set as Default Launcher</string>
    <string name="ask_to_set_as_default_launcher">Do you want to set this app as the Default Launcher?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rename">Rename</string>
</resources>
